syntax = "proto3";

package square;

option go_package = "squarepb";

message SquareRootRequest {
  float a = 1;
}

message SquareRootResponse {
  float result = 1;
}

service SquareRootService{
  // ERROR Handling
  // this RPC will throw an exception if the sent number is negativ
  // The error being sent is of type INVALID_ARGUMENT
  rpc GetSquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}